# ROS_WS

./: .gitignore  README.md  configArm.txt
ESP32_WIFI_COW_Arduino/: ESP32_WIFI_COW_Arduino.ino  Encoder.h  Motor.cpp  Motor.h  Robot.cpp  Robot.h  pub.h  ros.h  tasks.h
src/arm/: CMakeLists.txt  package.xml
src/arm/include/: Arm.hpp  File.hpp  Nodes.hpp  shareMethods.hpp  tcpSocket.hpp  variables.hpp
src/arm/msg/: JointAngle.msg  singleJoint.msg
src/arm/src/: Arm.cpp  File.cpp  Nodes.cpp  main.cpp  state_pub_from_Jgaur.cpp  test0.cpp
src/drrobot_5dofmanipulator_ctrl/src/: mainwindow.cpp
src/gazebo_pkg/: CMakeLists.txt  package.xml
src/jaguar/: CMakeLists.txt  package.xml
src/jaguar/include/: Arm.hpp  File.hpp  Jaguar.hpp  Nodes.hpp  shareMethods.hpp  tcpSocket.hpp  variables.hpp
src/jaguar/keypress/: keypressed.cpp  mainNoRos.cpp
src/jaguar/launch/: myJoy.launch
src/jaguar/msg/: FlipMotor.msg  myCmd_vel.msg
src/jaguar/src/: Arm.cpp  File.cpp  Jaguar.cpp  Nodes.cpp  (+3 more)
src/mini_jaguar_pkg/: CMakeLists.txt  package.xml
src/nav_jaguar/: CMakeLists.txt  package.xml
src/nav_jaguar/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch  odom_navigation_demo_jackal.launch
src/nav_jaguar/launch/include/: amcl.launch  move_base.launch
src/nav_jaguar/params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/nav_jaguar/params/map_nav_params/: global_costmap_params.yaml
src/nav_jaguar/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/nav_jaguar_2d/: CMakeLists.txt  package.xml
(+32 files in other folders)
