<?xml version="1.0"?>
<package>
  <name>nav_jaguar</name>
  <version>0.6.3</version>
  <description>Launch files and code for autonomous navigation of the Jagual</description>
  <maintainer email="aalra021@fiu.edu">Abdulmueen Alrashide</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>

  </export>
</package>
